--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,11 @@
 }
 .bg-purple{
   background-color: var(--medium-purple);
+  width: 100%;
+  -webkit-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.14);
+  -moz-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.14);
+  box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.14);
+
 }
 
 #a-logo{
@@ -33,6 +38,11 @@
 .menu li{
   margin-left: 30px;
   letter-spacing: .2px;
+}
+.menu li:last-child form input{
+  padding: 0px;
+  padding-top: 3px;
+  margin: auto 0;
 }
 .menu li a{
   color: #ffffff;
@@ -99,12 +109,17 @@
   margin: 10px auto auto;
 }
 
-.div-background-developer{
+.background-developer{
   background-color: #fcf8ff;
-  margin-top: 60px;
-  padding: 40px 0px;
-  
 }
+.background-extension{
+  background-color: #ffffff;
+  margin-top: 60px;
+}
+.section-background-full{
+  padding: 40px 0px;  
+}
+
 .the-developer{
   padding-bottom: 20px;
 }
@@ -153,6 +168,15 @@ footer p{
   margin: 0px;
 }
 
+.the-extension{
+  padding: 40px 15px;
+  background-color: #ffffff;
+}
+#image-extension{
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
 
 /* */
  /* Extra small devices (portrait phones, less than 576px) */
@@ -167,16 +191,26 @@ footer p{
     height: 100%;
     transform: skewY(-30deg);
   }
+  #image-extension{
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    max-height: 202px;
+  }
+  #image-banner{
+    margin-top: 175px;
+  }
+    
 }
 
  /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-
+    
 }
 
  /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
-
+  
 }
 
  /* Large devices (desktops, less than 1200px) */
