--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@
   background-color: var(--medium-purple);
   color: #ffffff;
 }
-.space-button{
-  margin-left: 15px;
+#space-button{
+  margin-right: 30px;
 }
 
 .btn-purple:hover{
